# Sqwale

./: .dockerignore  .gitignore  4x-Rybu.onnx  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  Sqwale.ipynb  rustfmt.toml  sqwale_style.txt
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci-lint.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  docker.yml
docs/: architecture.md  continue-flag-plan.md  models.md  providers.md  tiling.md  video-upscale-plan.md
models/: 4xLSDIRCompactv2.onnx
src/: cli.rs  config.rs  imageio.rs  lib.rs  main.rs
src/cli/: inspect.rs  interpolate.rs  mod.rs  output.rs  upscale.rs
src/commands/: inspect.rs  mod.rs  upscale.rs
src/ffmpeg/: mod.rs
src/inspect/: detect.rs  mod.rs  proto.rs
src/interpolate/: mod.rs  rife.rs
src/pipeline/: blend.rs  mod.rs  tensor.rs  tiling.rs
src/session/: mod.rs  provider.rs
src/upscale/: mod.rs  provider.rs  session.rs  tile_size.rs  tiling.rs  vram.rs
tests/: inspect.rs
