[package]
name         = "sqwale"
version      = "0.2.0"
edition      = "2024"
rust-version = "1.85.0"
authors      = ["Hyphonical"]
license      = "MIT"
repository   = "https://github.com/Hyphonical/Sqwale"
description  = "ONNX super-resolution inference library and CLI"

[[bin]]
name = "sqwale"
path = "src/main.rs"

[lib]
name = "sqwale"
path = "src/lib.rs"

[dependencies]
# ── Model Loading & Inference ─────────────────────────────────────────────
ort     = { version = "2.0.0-rc.12", features = ["api-24", "half"] }
ndarray = { version = "0.17", default-features = false }
half    = "2"

# ── Image Processing ──────────────────────────────────────────────────────
image = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "webp"
] }

# ── CLI & Output ──────────────────────────────────────────────────────────
clap      = { version = "4", default-features = false, features = [
    "derive", "std", "help", "usage", "error-context"
] }
colored   = "3"
indicatif = "0.18"
ctrlc     = "3"

# ── Logging ───────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }
tracing-indicatif  = "0.3"

# ── Serialization ─────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Utilities ─────────────────────────────────────────────────────────────
anyhow            = "1"
crossbeam-channel = "0.5"
glob              = "0.3"
realfft           = "3.5.0"
rustfft           = "6.4.1"
rayon             = "1.11.0"

[profile.release.package."*"]
opt-level = 3

[profile.release]
opt-level     = "s"
lto           = "fat"
codegen-units = 1
strip         = true
panic         = "abort"

[profile.fast]
inherits      = "release"
opt-level     = 1
debug         = 0
codegen-units = 32
incremental   = true
lto           = "off"
panic         = "abort"
strip         = false